// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sceneryPageBuilder build scenery page 1`] = `
"{{New Content}}
{{Infobox Scenery
|name = name
|image = [[File:name.png]]
|release = 
|update = update
|members = Yes
|quest = No
|options = action1, action2
|examine = 
|id = 1
}}
'''name''' is a scenery object."
`;

exports[`sceneryPageBuilder build scenery page with beta id 1`] = `
"{{New Content}}
{{Infobox Scenery
|name = name
|image = [[File:name.png]]
|release = 
|update = update
|members = Yes
|quest = No
|options = action1, action2
|examine = 
|id = beta1
}}
'''name''' is a scenery object."
`;

exports[`sceneryPageBuilder should strip HTML tags from scenery name in page content 1`] = `
"{{New Content}}
{{Infobox Scenery
|name = Red Chest
|image = [[File:Red Chest.png]]
|release = 
|update = update
|members = Yes
|quest = No
|options = Open, Search
|examine = 
|id = 123
}}
'''Red Chest''' is a scenery object."
`;
